tests/baselines/reference/deleteExpressionMustBeOptional(strict=true).errors.txt
tests/cases/compiler/deleteExpressionMustBeOptional.ts(15,8): error TS2790: The operand of a 'delete' operator must be optional.
tests/cases/compiler/deleteExpressionMustBeOptional.ts(17,8): error TS2790: The operand of a 'delete' operator must be optional.
tests/cases/compiler/deleteExpressionMustBeOptional.ts(24,10): error TS2339: Property 'j' does not exist on type 'Foo'.


==== tests/cases/compiler/deleteExpressionMustBeOptional.ts (3 errors) ====
    interface Foo {
        a: number
        b: number | undefined
        c: number | null
        d?: number
        e: number | undefined | null
        f?: number | undefined | null
        g: unknown
        h: any
        i: never
    }
    
    declare const f: Foo
    
    delete f.a
           ~~~
!!! error TS2790: The operand of a 'delete' operator must be optional.
    delete f.b
    delete f.c
           ~~~
!!! error TS2790: The operand of a 'delete' operator must be optional.
    delete f.d
    delete f.e
    delete f.f
    delete f.g
    delete f.h
    delete f.i
    delete f.j
             ~
!!! error TS2339: Property 'j' does not exist on type 'Foo'.